--- a/html_video_9.html
+++ b/html_video_9.html
@@ -4,9 +4,10 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>video5</title>
+    <title>html_video_9</title>
 </head>
 <body>
-    baitap5
+    Học được các lệnh như phông chữ
+    baitap9.txt
 </body>
 </html>
