--- a/video9.html
+++ b/video9.html
@@ -1,6 +1,7 @@
-<!DOCTYPE html></html>
+<!DOCTYPE html>
+<html>
 <head>
-    <title>Document</title>
+    <title>Bài tập 9</title>
 </head>
 <body>
  1.Thẻ DIV và thẻ SPAN
