--- a/CSS12.html
+++ b/CSS12.html
@@ -4,9 +4,17 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>video5</title>
+    <title>Units in CSS</title>
+    <style>
+        .box {
+            width: 50%;
+            height: 600px;
+            background-color: orange;
+            
+        }
+    </style>
 </head>
 <body>
-    baitap5
+    <div class="box"></div>
 </body>
 </html>
