--- a/CSS13.html
+++ b/CSS13.html
@@ -4,9 +4,9 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Video 01</title>
+    <title>Sử dụng biế trong CSS</title>
 </head>
 <body>
-    
+    <h2>Sử dụng biến trong html giúp chúng ta tối ưu được code và giải quyết những vẫn đề trùng lặp</h2>
 </body>
 </html>
