--- a/CSS2.html
+++ b/CSS2.html
@@ -5,11 +5,11 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Tại Sao Phải Sử Dụng CSS</title>
-    <style>
+    <!-- <style>
         td {
             color: red;
         }
-    </style>
+    </style> -->
 </head>
 <body>
     <table width="500" border="1">
