--- a/CSS15.html
+++ b/CSS15.html
@@ -4,23 +4,9 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>EM & REM  units in CSS </title>
-    <style>
-        html {
-            font-size: 14px;
-        }
-        body {
-            font-size: 24px;
-        }
-        .content {
-            font-size: 1rem;
-        }
-    </style>
-
+    <title>Document</title>
 </head>
 <body>
-    <div class="content">
-        Lorem ipsum dolor sit amet consectetur adipisicing elit. Aperiam iure et deleniti dolores, corporis fugit a rerum quidem odit incidunt consequatur, qui assumenda, sunt nobis. Magni fugiat quo laudantium laboriosam?
-    </div>
+    
 </body>
 </html>
