--- a/exam.html
+++ b/exam.html
@@ -4,9 +4,25 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Video 01</title>
+    <title>CODE CSS </title>
 </head>
 <body>
+
+    display: kiểu thẻ nằm ngang hàng với nhau 
+________________________________________________________
+
+    1:Flex-wrap :nó sẽ phá vỡ qui định kiểu thẻ (display flex) nó sẽ xuống dòng
+    -normal
+    -wrap
+    -column
+    -Flex-reverse: nó sẽ đảo ngược vị trí cho nhau trên thẻ
+
+    2:order
+    - order : number
+
+    3.flex-grow: number
+
+
     
 </body>
 </html>
